@@ -126,5 +126,5 @@
 "Latitude","Zeměpisná šířka"
 "Is address validated?","Je adresa validní?"
 "Order detail","Detail objednávky"
-"Selected payment method is not allowed because grand total exceeds limit %1.","Zvolená platební metoda není povolena, protože překračuje maximální hodnotu objednávky %1."
+"Selected payment method is not allowed because the grand total exceeds the max COD (%1) set up for this carrier.","Zvolená platební metoda není povolena, protože překračuje maximální povolenou hodnotu dobírky (%1) nastavenou pro tohoto dopravce."
 "Max COD","Maximální výše dobírky"
